--- a/investment-portfolio-back/package.json
+++ b/investment-portfolio-back/package.json
@@ -1,7 +1,7 @@
 {
   "name": "investment-portfolio-back",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "start": "ts-node index.ts",
     "start:dev": "tsnd index.ts",
